--- a/app/src/main/res/drawable/window_button.xml
+++ b/app/src/main/res/drawable/window_button.xml
@@ -4,14 +4,14 @@
         <shape android:shape="rectangle">
             <corners android:radius="12dip" />
             <stroke android:width="3dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#8dbab3" android:endColor="#58857e" />
+            <gradient android:angle="-90" android:endColor="#58857e" android:startColor="#8dbab3" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="7dip" />
             <stroke android:width="3dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#8dbab3" android:endColor="#58857e" />
+            <gradient android:angle="-90" android:endColor="#58857e" android:startColor="#8dbab3" />
         </shape>
     </item>
 </selector>
