Remove button click sound

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -172,6 +172,7 @@
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
             android:scaleType="centerCrop"
+            android:soundEffectsEnabled="false"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X2"
             app:layout_constraintStart_toStartOf="@id/guideline_X1"
@@ -186,6 +187,7 @@
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
             android:scaleType="centerCrop"
+            android:soundEffectsEnabled="false"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X4"
             app:layout_constraintStart_toStartOf="@id/guideline_X3"
@@ -200,6 +202,7 @@
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
             android:scaleType="centerCrop"
+            android:soundEffectsEnabled="false"
             app:layout_constraintBottom_toBottomOf="@id/guideline_L_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X2"
             app:layout_constraintStart_toStartOf="@id/guideline_X1"
@@ -214,6 +217,7 @@
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
             android:scaleType="centerCrop"
+            android:soundEffectsEnabled="false"
             app:layout_constraintBottom_toBottomOf="@id/guideline_L_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X4"
             app:layout_constraintStart_toStartOf="@id/guideline_X3"
@@ -229,6 +233,7 @@
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
             android:scaleType="centerCrop"
+            android:soundEffectsEnabled="false"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X6"
             app:layout_constraintStart_toStartOf="@id/guideline_X5"
@@ -243,6 +248,7 @@
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
             android:scaleType="centerCrop"
+            android:soundEffectsEnabled="false"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X8"
             app:layout_constraintStart_toStartOf="@id/guideline_X7"
@@ -257,6 +263,7 @@
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
             android:scaleType="centerCrop"
+            android:soundEffectsEnabled="false"
             app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X6"
             app:layout_constraintStart_toStartOf="@id/guideline_X5"
@@ -271,6 +278,7 @@
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
             android:scaleType="centerCrop"
+            android:soundEffectsEnabled="false"
             app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X8"
             app:layout_constraintStart_toStartOf="@id/guideline_X7"
@@ -285,6 +293,7 @@
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
             android:scaleType="centerCrop"
+            android:soundEffectsEnabled="false"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X10"
             app:layout_constraintStart_toStartOf="@id/guideline_X9"
@@ -299,6 +308,7 @@
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
             android:scaleType="centerCrop"
+            android:soundEffectsEnabled="false"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X12"
             app:layout_constraintStart_toStartOf="@id/guideline_X11"
@@ -313,6 +323,7 @@
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
             android:scaleType="centerCrop"
+            android:soundEffectsEnabled="false"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X10"
             app:layout_constraintStart_toStartOf="@id/guideline_X9"
@@ -327,6 +338,7 @@
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
             android:scaleType="centerCrop"
+            android:soundEffectsEnabled="false"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X12"
             app:layout_constraintStart_toStartOf="@id/guideline_X11"
