--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -6,6 +6,70 @@
     android:layout_height="match_parent"
     android:fadingEdge="horizontal">
 
+    <!--Vertical  guidelines  -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_X2_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.45" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_X1_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.25" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_X1_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.35" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_X2_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.55" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_X3_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.65" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_X3_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.75" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_Y1_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.55" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_Y2_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.65" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_Y1_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.37" />
+
     <ImageButton
         android:id="@+id/exitButton"
         android:layout_width="31dp"
@@ -20,37 +84,34 @@
 
     <ImageButton
         android:id="@+id/Einstellungen"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
-        android:layout_marginTop="128dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@drawable/roundcorner"
         android:backgroundTint="@color/white"
         android:elevation="@dimen/button_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.236"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_Y1_2"
+        app:layout_constraintEnd_toEndOf="@id/guideline_X1_2"
+        app:layout_constraintStart_toStartOf="@id/guideline_X1_1"
+        app:layout_constraintTop_toTopOf="@id/guideline_Y1_1"
         app:srcCompat="@drawable/settings_black_36dp" />
 
     <TextView
         android:id="@+id/EinstellungenTag"
-        android:layout_width="107dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="152dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:gravity="center"
         android:text="Einstellungen"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_Y2_1"
+        app:layout_constraintEnd_toEndOf="@id/guideline_X1_2"
         app:layout_constraintEnd_toStartOf="@+id/slider3"
-        app:layout_constraintHorizontal_bias="0.525"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.606" />
+        app:layout_constraintStart_toStartOf="@id/guideline_X1_1"
+        app:layout_constraintTop_toTopOf="@id/guideline_Y1_2" />
 
     <TextView
         android:id="@+id/AufnahmenTag"
         android:layout_width="107dp"
         android:layout_height="40dp"
-        android:layout_marginStart="324dp"
+        android:layout_marginStart="312dp"
         android:gravity="center"
         android:text="Aufnahmen"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,30 +137,28 @@
 
     <ImageButton
         android:id="@+id/Takt"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
-        android:layout_marginTop="128dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@drawable/roundcorner"
         android:backgroundTint="@color/white"
         android:elevation="@dimen/button_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.696"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_Y1_2"
+        app:layout_constraintEnd_toEndOf="@id/guideline_X3_2"
+        app:layout_constraintStart_toStartOf="@id/guideline_X3_1"
+        app:layout_constraintTop_toTopOf="@id/guideline_Y1_1"
         app:srcCompat="@drawable/metronome_1_" />
 
     <ImageButton
         android:id="@+id/Aufnahmen"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
-        android:layout_marginTop="128dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@drawable/roundcorner"
         android:backgroundTint="@color/white"
         android:elevation="@dimen/button_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.473"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_Y1_2"
+        app:layout_constraintEnd_toEndOf="@id/guideline_X2_2"
+        app:layout_constraintStart_toStartOf="@id/guideline_X2_1"
+        app:layout_constraintTop_toTopOf="@id/guideline_Y1_1"
         app:srcCompat="@drawable/queue_music_black_36dp" />
 
     <TextView
@@ -120,7 +179,7 @@
         android:id="@+id/SoundIcon"
         android:layout_width="72dp"
         android:layout_height="58dp"
-        android:layout_marginTop="264dp"
+        android:layout_marginTop="276dp"
         android:background="@drawable/roundcorner"
         android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
