--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -7,6 +7,17 @@
     android:fadingEdge="horizontal">
 
     <!--Vertical  guidelines  -->
+    <ImageButton
+        android:id="@+id/exitButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:backgroundTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_Y0_2"
+        app:layout_constraintEnd_toEndOf="@id/guideline_X0_4"
+        app:layout_constraintStart_toStartOf="@id/guideline_X0_3"
+        app:layout_constraintTop_toTopOf="@id/guideline_Y0_1"
+        app:srcCompat="?attr/actionModeCloseDrawable" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_X2_1"
         android:layout_width="wrap_content"
@@ -20,6 +31,34 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.25" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_X0_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_X0_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.95" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_X0_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.15" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_X0_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.85" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_X1_2"
@@ -57,11 +96,39 @@
         app:layout_constraintGuide_percent="0.55" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_Y2_1"
+        android:id="@+id/guideline_Y1_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.65" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_Y2_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.69" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_Y2_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.7" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_Y3_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.75" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_Y3_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.85" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_Y1_1"
@@ -70,17 +137,19 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.37" />
 
-    <ImageButton
-        android:id="@+id/exitButton"
-        android:layout_width="31dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="28dp"
-        android:backgroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.95"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="?attr/actionModeCloseDrawable" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_Y0_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.18" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_Y0_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.0" />
 
     <ImageButton
         android:id="@+id/Einstellungen"
@@ -97,43 +166,36 @@
 
     <TextView
         android:id="@+id/EinstellungenTag"
-        android:layout_width="0dp"
+        android:layout_width="100dp"
         android:layout_height="0dp"
         android:gravity="center"
         android:text="Einstellungen"
-        app:layout_constraintBottom_toBottomOf="@id/guideline_Y2_1"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_Y1_3"
         app:layout_constraintEnd_toEndOf="@id/guideline_X1_2"
-        app:layout_constraintEnd_toStartOf="@+id/slider3"
         app:layout_constraintStart_toStartOf="@id/guideline_X1_1"
         app:layout_constraintTop_toTopOf="@id/guideline_Y1_2" />
 
     <TextView
         android:id="@+id/AufnahmenTag"
-        android:layout_width="107dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="312dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:gravity="center"
         android:text="Aufnahmen"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/slider3"
-        app:layout_constraintHorizontal_bias="0.525"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.606" />
+        app:layout_constraintBottom_toBottomOf="@id/guideline_Y1_3"
+        app:layout_constraintEnd_toEndOf="@id/guideline_X2_2"
+        app:layout_constraintStart_toStartOf="@id/guideline_X2_1"
+        app:layout_constraintTop_toTopOf="@id/guideline_Y1_2" />
 
     <TextView
         android:id="@+id/TaktTag"
-        android:layout_width="107dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="488dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:gravity="center"
         android:text="Takt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/slider3"
-        app:layout_constraintHorizontal_bias="0.525"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.603" />
+        app:layout_constraintBottom_toBottomOf="@id/guideline_Y1_3"
+        app:layout_constraintEnd_toEndOf="@id/guideline_X3_2"
+        app:layout_constraintStart_toStartOf="@id/guideline_X3_1"
+        app:layout_constraintTop_toTopOf="@id/guideline_Y1_2" />
 
     <ImageButton
         android:id="@+id/Takt"
@@ -163,49 +225,41 @@
 
     <TextView
         android:id="@+id/volumeTag"
-        android:layout_width="82dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="44dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:gravity="center"
-        android:text="Volume"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/slider3"
-        app:layout_constraintHorizontal_bias="0.525"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.936" />
+        android:text="Takt"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_Y3_2"
+        app:layout_constraintEnd_toEndOf="@id/guideline_X0_2"
+        app:layout_constraintStart_toStartOf="@id/guideline_X0_1"
+        app:layout_constraintTop_toTopOf="@id/guideline_Y3_1" />
 
     <ImageButton
         android:id="@+id/SoundIcon"
-        android:layout_width="72dp"
-        android:layout_height="58dp"
-        android:layout_marginTop="276dp"
-        android:background="@drawable/roundcorner"
-        android:backgroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.068"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:backgroundTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_Y3_2"
+        app:layout_constraintEnd_toEndOf="@id/guideline_X0_2"
+        app:layout_constraintStart_toStartOf="@id/guideline_X0_1"
+        app:layout_constraintTop_toTopOf="@id/guideline_Y3_1"
         app:srcCompat="@drawable/volume_up_black_36dp" />
 
     <com.google.android.material.slider.Slider
         android:id="@+id/volumeSlider2"
-        android:layout_width="460dp"
-        android:layout_height="46dp"
-        android:stepSize="1.0"
+        android:layout_width="0dp"
+        android:layout_height="10dp"
         android:theme="@style/sliderTheme"
         android:valueFrom="0.0"
         android:valueTo="100.0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.431"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.842" />
+        app:layout_constraintBottom_toBottomOf="@id/guideline_Y3_2"
+        app:layout_constraintEnd_toEndOf="@id/guideline_X0_3"
+        app:layout_constraintStart_toStartOf="@id/guideline_X0_2"
+        app:layout_constraintTop_toTopOf="@id/guideline_Y3_1" />
 
     <ImageView
         android:id="@+id/Barrier"
-        android:layout_width="725dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#8C000000"
         android:backgroundTint="#8C000000"
@@ -215,11 +269,9 @@
         android:paddingBottom="1dp"
         android:scaleType="centerCrop"
         android:src="@android:drawable/divider_horizontal_dark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.543"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.705" />
+        app:layout_constraintBottom_toBottomOf="@id/guideline_Y2_2"
+        app:layout_constraintEnd_toEndOf="@id/guideline_X0_4"
+        app:layout_constraintStart_toStartOf="@id/guideline_X0_1"
+        app:layout_constraintTop_toTopOf="@id/guideline_Y2_1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
