--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -171,8 +171,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
+            android:onClick="playSound"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
+            android:tag="jazz_riff.sf2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X2"
             app:layout_constraintStart_toStartOf="@id/guideline_X1"
@@ -186,8 +188,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
+            android:onClick="playSound"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
+            android:tag="jazz_riff.sf2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X4"
             app:layout_constraintStart_toStartOf="@id/guideline_X3"
@@ -201,8 +205,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
+            android:onClick="playSound"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
+            android:tag="jazz_riff.sf2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_L_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X2"
             app:layout_constraintStart_toStartOf="@id/guideline_X1"
@@ -216,8 +222,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
+            android:onClick="playSound"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
+            android:tag="jazz_riff.sf2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_L_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X4"
             app:layout_constraintStart_toStartOf="@id/guideline_X3"
@@ -232,8 +240,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
+            android:onClick="playSound"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
+            android:tag="jazz_riff.sf2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X6"
             app:layout_constraintStart_toStartOf="@id/guideline_X5"
@@ -247,8 +257,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
+            android:onClick="playSound"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
+            android:tag="jazz_riff.sf2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X8"
             app:layout_constraintStart_toStartOf="@id/guideline_X7"
@@ -262,8 +274,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
+            android:onClick="playSound"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
+            android:tag="jazz_riff.sf2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X6"
             app:layout_constraintStart_toStartOf="@id/guideline_X5"
@@ -277,8 +291,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
+            android:onClick="playSound"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
+            android:tag="jazz_riff.sf2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X8"
             app:layout_constraintStart_toStartOf="@id/guideline_X7"
@@ -292,8 +308,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
+            android:onClick="playSound"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
+            android:tag="jazz_riff.sf2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X10"
             app:layout_constraintStart_toStartOf="@id/guideline_X9"
@@ -307,8 +325,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
+            android:onClick="playSound"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
+            android:tag="jazz_riff.sf2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X12"
             app:layout_constraintStart_toStartOf="@id/guideline_X11"
@@ -322,8 +342,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
+            android:onClick="playSound"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
+            android:tag="jazz_riff.sf2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X10"
             app:layout_constraintStart_toStartOf="@id/guideline_X9"
@@ -337,8 +359,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
+            android:onClick="playSound"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
+            android:tag="jazz_riff.sf2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X12"
             app:layout_constraintStart_toStartOf="@id/guideline_X11"
