Remove crashing of app and refactoring

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -171,10 +171,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
-            android:onClick="playSound"
+            android:onClick="playSynth"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
-            android:tag="jazz_riff.sf2"
+            android:tag="jazz_riff.sf2,0"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X2"
             app:layout_constraintStart_toStartOf="@id/guideline_X1"
@@ -188,10 +188,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
-            android:onClick="playSound"
+            android:onClick="playSynth"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
-            android:tag="jazz_riff.sf2"
+            android:tag="beeper.sf2,1"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X4"
             app:layout_constraintStart_toStartOf="@id/guideline_X3"
@@ -205,10 +205,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
-            android:onClick="playSound"
+            android:onClick="playSynth"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
-            android:tag="jazz_riff.sf2"
+            android:tag="jazz_riff.sf2,2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_L_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X2"
             app:layout_constraintStart_toStartOf="@id/guideline_X1"
@@ -222,10 +222,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
-            android:onClick="playSound"
+            android:onClick="playSynth"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
-            android:tag="jazz_riff.sf2"
+            android:tag="jazz_riff.sf2,3"
             app:layout_constraintBottom_toBottomOf="@id/guideline_L_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X4"
             app:layout_constraintStart_toStartOf="@id/guideline_X3"
@@ -240,10 +240,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
-            android:onClick="playSound"
+            android:onClick="playSynth"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
-            android:tag="jazz_riff.sf2"
+            android:tag="jazz_riff.sf2,4"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X6"
             app:layout_constraintStart_toStartOf="@id/guideline_X5"
@@ -257,10 +257,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
-            android:onClick="playSound"
+            android:onClick="playSynth"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
-            android:tag="jazz_riff.sf2"
+            android:tag="jazz_riff.sf2,5"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X8"
             app:layout_constraintStart_toStartOf="@id/guideline_X7"
@@ -274,10 +274,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
-            android:onClick="playSound"
+            android:onClick="playSynth"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
-            android:tag="jazz_riff.sf2"
+            android:tag="jazz_riff.sf2,6"
             app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X6"
             app:layout_constraintStart_toStartOf="@id/guideline_X5"
@@ -291,10 +291,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
-            android:onClick="playSound"
+            android:onClick="playSynth"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
-            android:tag="jazz_riff.sf2"
+            android:tag="jazz_riff.sf2,7"
             app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X8"
             app:layout_constraintStart_toStartOf="@id/guideline_X7"
@@ -308,10 +308,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
-            android:onClick="playSound"
+            android:onClick="playSynth"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
-            android:tag="jazz_riff.sf2"
+            android:tag="jazz_riff.sf2,8"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X10"
             app:layout_constraintStart_toStartOf="@id/guideline_X9"
@@ -325,10 +325,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
-            android:onClick="playSound"
+            android:onClick="playSynth"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
-            android:tag="jazz_riff.sf2"
+            android:tag="jazz_riff.sf2,9"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X12"
             app:layout_constraintStart_toStartOf="@id/guideline_X11"
@@ -342,10 +342,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
-            android:onClick="playSound"
+            android:onClick="playSynth"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
-            android:tag="jazz_riff.sf2"
+            android:tag="jazz_riff.sf2,10"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X10"
             app:layout_constraintStart_toStartOf="@id/guideline_X9"
@@ -359,10 +359,10 @@
             android:background="@drawable/window_button"
             android:backgroundTint="#958BC34A"
             android:elevation="2dp"
-            android:onClick="playSound"
+            android:onClick="playSynth"
             android:scaleType="centerCrop"
             android:soundEffectsEnabled="false"
-            android:tag="jazz_riff.sf2"
+            android:tag="jazz_riff.sf2,11"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X12"
             app:layout_constraintStart_toStartOf="@id/guideline_X11"
