--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -166,14 +166,8 @@
         <!-- Buttons-->
         <Button
             android:id="@+id/top_left1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/window_button"
-            android:backgroundTint="#958BC34A"
-            android:elevation="2dp"
+            style="@style/windowbutton_style"
             android:onClick="playSynth"
-            android:scaleType="centerCrop"
-            android:soundEffectsEnabled="false"
             android:tag="jazz_riff.sf2,0"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X2"
@@ -183,14 +177,8 @@
 
         <Button
             android:id="@+id/top_left2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/window_button"
-            android:backgroundTint="#958BC34A"
-            android:elevation="2dp"
+            style="@style/windowbutton_style"
             android:onClick="playSynth"
-            android:scaleType="centerCrop"
-            android:soundEffectsEnabled="false"
             android:tag="beeper.sf2,1"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X4"
@@ -200,14 +188,8 @@
 
         <Button
             android:id="@+id/bottom_left1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/window_button"
-            android:backgroundTint="#958BC34A"
-            android:elevation="2dp"
+            style="@style/windowbutton_style"
             android:onClick="playSynth"
-            android:scaleType="centerCrop"
-            android:soundEffectsEnabled="false"
             android:tag="jazz_riff.sf2,2"
             app:layout_constraintBottom_toBottomOf="@id/guideline_L_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X2"
@@ -217,14 +199,8 @@
 
         <Button
             android:id="@+id/bottom_left2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/window_button"
-            android:backgroundTint="#958BC34A"
-            android:elevation="2dp"
+            style="@style/windowbutton_style"
             android:onClick="playSynth"
-            android:scaleType="centerCrop"
-            android:soundEffectsEnabled="false"
             android:tag="jazz_riff.sf2,3"
             app:layout_constraintBottom_toBottomOf="@id/guideline_L_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X4"
@@ -235,14 +211,8 @@
 
         <Button
             android:id="@+id/top_middle1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/window_button"
-            android:backgroundTint="#958BC34A"
-            android:elevation="2dp"
+            style="@style/windowbutton_style"
             android:onClick="playSynth"
-            android:scaleType="centerCrop"
-            android:soundEffectsEnabled="false"
             android:tag="jazz_riff.sf2,4"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X6"
@@ -252,14 +222,8 @@
 
         <Button
             android:id="@+id/top_middle2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/window_button"
-            android:backgroundTint="#958BC34A"
-            android:elevation="2dp"
+            style="@style/windowbutton_style"
             android:onClick="playSynth"
-            android:scaleType="centerCrop"
-            android:soundEffectsEnabled="false"
             android:tag="jazz_riff.sf2,5"
             app:layout_constraintBottom_toBottomOf="@id/guideline_LC_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X8"
@@ -269,14 +233,8 @@
 
         <Button
             android:id="@+id/bottom_middle1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/window_button"
-            android:backgroundTint="#958BC34A"
-            android:elevation="2dp"
+            style="@style/windowbutton_style"
             android:onClick="playSynth"
-            android:scaleType="centerCrop"
-            android:soundEffectsEnabled="false"
             android:tag="jazz_riff.sf2,6"
             app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X6"
@@ -286,14 +244,8 @@
 
         <Button
             android:id="@+id/bottom_middle2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/window_button"
-            android:backgroundTint="#958BC34A"
-            android:elevation="2dp"
+            style="@style/windowbutton_style"
             android:onClick="playSynth"
-            android:scaleType="centerCrop"
-            android:soundEffectsEnabled="false"
             android:tag="jazz_riff.sf2,7"
             app:layout_constraintBottom_toBottomOf="@id/guideline_C_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X8"
@@ -303,14 +255,8 @@
 
         <Button
             android:id="@+id/top_right1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/window_button"
-            android:backgroundTint="#958BC34A"
-            android:elevation="2dp"
+            style="@style/windowbutton_style"
             android:onClick="playSynth"
-            android:scaleType="centerCrop"
-            android:soundEffectsEnabled="false"
             android:tag="jazz_riff.sf2,8"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X10"
@@ -320,14 +266,8 @@
 
         <Button
             android:id="@+id/top_right2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/window_button"
-            android:backgroundTint="#958BC34A"
-            android:elevation="2dp"
+            style="@style/windowbutton_style"
             android:onClick="playSynth"
-            android:scaleType="centerCrop"
-            android:soundEffectsEnabled="false"
             android:tag="jazz_riff.sf2,9"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y3"
             app:layout_constraintEnd_toEndOf="@id/guideline_X12"
@@ -337,14 +277,8 @@
 
         <Button
             android:id="@+id/bottom_right1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/window_button"
-            android:backgroundTint="#958BC34A"
-            android:elevation="2dp"
+            style="@style/windowbutton_style"
             android:onClick="playSynth"
-            android:scaleType="centerCrop"
-            android:soundEffectsEnabled="false"
             android:tag="jazz_riff.sf2,10"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X10"
@@ -354,14 +288,8 @@
 
         <Button
             android:id="@+id/bottom_right2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/window_button"
-            android:backgroundTint="#958BC34A"
-            android:elevation="2dp"
+            style="@style/windowbutton_style"
             android:onClick="playSynth"
-            android:scaleType="centerCrop"
-            android:soundEffectsEnabled="false"
             android:tag="jazz_riff.sf2,11"
             app:layout_constraintBottom_toBottomOf="@id/guideline_R_Y1"
             app:layout_constraintEnd_toEndOf="@id/guideline_X12"
